fix edit button visibility

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,7 +8,7 @@
   height: 24px;
   margin: 15px 0 0 18px;
   padding: 0;
-  background-image: url("../../../images/edit-button.svg");
+  background-image: url("../../../images/Edit-button.svg");
 }
 
 .profile__edit-button:hover {
